--- a/client/src/main.css
+++ b/client/src/main.css
@@ -25,3 +25,10 @@
     margin: 0;
     padding: 0;
 }
+
+.CodeMirror {
+    min-height: calc(100vh - 20px);
+    font-size: 15px;
+    line-height: 1.6;
+    padding-top: 20px;
+}
