--- a/client/src/styles/EditorPageStyles.module.css
+++ b/client/src/styles/EditorPageStyles.module.css
@@ -25,9 +25,10 @@ h4 {
 .memberList {
     flex-grow: 1;
     overflow-y: auto;
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: start;
     justify-content: center;
     gap: 20px;
     padding: 20px 0;
